# course

./: .gitignore  CMakeLists.txt  main.c  tasks.c  test.c
libs/algorithms/: CMakeLists.txt  algorithms.h
libs/algorithms/array/: array.c  array.h
libs/algorithms/string/: string_.c  string_.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/orderedArray/: orderedArray.c  orderedArray.h
libs/data_structures/unorderedArray/: unorderedArray.c  unorderedArray.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vectorVoid/: vectorVoid.c  vectorVoid.h
libs/string/: string_.c  string_.h
libs/string/tasks/: deleteWordLikeLast.h  digitToEnd.h  fillString.h  findFirstStrLastWordOfSecondStr.h  findWordBeforeW.h  getCountOfPalindromes.h  getReverseString.h  getSpaceForDigits.h  getStringDifferentFromLastWord.h  getStringOfAlternatingWords.h  haveAnagrams.h  haveEqualWords.h  isIncludeAllLettersInStr.h  isSortedWords.h  printWordBeforeFirstWordWithA.h  printWordRevers.h  printWordsRevers.h  removeAdjacentEqualLetters.h  removeExtraSpaces.h  removeNonLetters.h  replace.h
libs/tests/: tests_string_.h
